# kiln

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  install.sh  kiln-milestones.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/kiln-build/: Cargo.toml  README.md
crates/kiln-build/src/: cache.rs  diagnostic.rs  lib.rs  plan.rs  render.rs  source_set.rs
crates/kiln-build/src/backend/: mod.rs  verilator.rs
crates/kiln-build/tests/fixtures/captured/: syntax_error.verilator.txt
crates/kiln-cli/: Cargo.toml  README.md
crates/kiln-cli/src/: hooks.rs  junit.rs  main.rs  render.rs  reporter.rs
crates/kiln-cli/src/commands/: build.rs  check.rs  check_manifest.rs  deps.rs  doc.rs  doctor.rs  env.rs  fmt.rs  install_tools.rs  lint.rs  lsp.rs  mod.rs  new.rs  schema.rs  test.rs  watch.rs  wave.rs
crates/kiln-cli/tests/: cli_basic.rs  cli_build.rs  cli_check.rs  cli_deps.rs  cli_doc.rs  cli_fmt.rs  cli_init.rs  cli_new.rs  cli_test.rs  cli_wave.rs
crates/kiln-cli/tests/snapshots/: cli_new__new_demo_layout.snap  cli_test__kiln_test_list.snap
crates/kiln-core/: Cargo.toml  README.md
crates/kiln-core/src/: lib.rs  lint_map.rs  manifest.rs  profile.rs  project.rs
crates/kiln-core/src/snapshots/: kiln_core__manifest__tests__invalid_bad_identifier.snap  kiln_core__manifest__tests__invalid_bad_semver.snap  kiln_core__manifest__tests__invalid_missing_include_dir.snap  kiln_core__manifest__tests__valid_full.snap  kiln_core__manifest__tests__valid_minimal.snap  kiln_core__manifest__tests__valid_underscore_name.snap
crates/kiln-deps/: Cargo.toml  README.md
crates/kiln-deps/src/: lib.rs  runner.rs  schema.rs  sources.rs
crates/kiln-doc/: Cargo.toml  README.md
crates/kiln-doc/src/: extract.rs  lib.rs  site.rs
crates/kiln-fmt/: Cargo.toml  README.md
crates/kiln-fmt/src/: lib.rs
crates/kiln-lint/: Cargo.toml  README.md
crates/kiln-lint/src/: lib.rs
crates/kiln-test/: Cargo.toml  README.md
crates/kiln-test/src/: lib.rs
crates/kiln-wave/: Cargo.toml  README.md
crates/kiln-wave/src/: lib.rs
crates/slang-rs/: Cargo.toml  README.md
crates/slang-rs/src/: ast.rs  compile.rs  diagnostic.rs  error.rs  handle.rs  lib.rs  runner.rs  version.rs
crates/slang-rs/src/snapshots/: slang_rs__handle__tests__missing_binary_error.snap
crates/slang-rs/tests/: e2e.rs
crates/slang-rs/tests/fixtures/: consumer.sv  package_pkg.sv  syntax_error.sv  valid_module.sv  width_mismatch.sv  with_defines.sv
crates/slang-rs/tests/fixtures/captured/: package_pkg.ast.json  syntax_error.diag.json  valid_module.ast.json  width_trunc.diag.json
crates/slang-rs/tests/fixtures/with_includes/: uses_include.sv
crates/slang-rs/tests/fixtures/with_includes/include/: header.svh
docs/: architecture.md  json-output.md  lockfile-spec.md  lsp-setup.md  manifest-spec.md  status.md
docs/decisions/: 0000-msrv-policy.md  0001-slang-integration-strategy.md  0002-slang-version-policy.md  0003-bender-integration.md  0004-lsp-strategy.md  0005-schema-extensibility-m10.md  0006-vendor-firmware-hooks-m11.md  0007-operational-tooling-m12.md
examples/hello-counter/: .gitignore  Kiln.toml
examples/hello-counter/.slang/: server.json
examples/hello-counter/src/: counter.sv  tb.sv
examples/hello-counter/tests/: parity.sv  smoke.sv
examples/lint-demo/: Kiln.toml
examples/lint-demo/src/: demo.sv
examples/local-ip/: Bender.yml
examples/local-ip/src/: counter.sv
examples/with-deps/: .gitignore  Kiln.toml
examples/with-deps/src/: consumer_top.sv
web/: docs.html  index.html  kiln-schema.json  reference.html  shared.css
