[workspace]
resolver = "2"
members = [
    "crates/kiln-cli",
    "crates/kiln-core",
    "crates/kiln-build",
    "crates/kiln-deps",
    "crates/kiln-lint",
    "crates/kiln-fmt",
    "crates/kiln-test",
    "crates/kiln-wave",
    "crates/kiln-doc",
    "crates/slang-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tejasprabhune/kiln"
authors = ["Tejas Prabhune <tejas.prabhune@gmail.com>"]

[workspace.dependencies]
kiln-core = { path = "crates/kiln-core" }
kiln-build = { path = "crates/kiln-build" }
kiln-deps = { path = "crates/kiln-deps" }
kiln-lint = { path = "crates/kiln-lint" }
kiln-fmt = { path = "crates/kiln-fmt" }
kiln-test = { path = "crates/kiln-test" }
kiln-wave = { path = "crates/kiln-wave" }
kiln-doc = { path = "crates/kiln-doc" }
slang-rs = { path = "crates/slang-rs" }

anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ariadne = "0.4"
blake3 = "1.5"
semver = { version = "1.0", features = ["serde"] }
glob = "0.3"
walkdir = "2.5"

# Test deps
insta = { version = "1.39", features = ["yaml"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = "thin"
codegen-units = 1
