[workspace]
resolver = "2"
members = [
    "crates/kiln-cli",
    "crates/kiln-core",
    "crates/kiln-build",
    "crates/kiln-deps",
    "crates/kiln-lint",
    "crates/kiln-fmt",
    "crates/kiln-test",
    "crates/kiln-wave",
    "crates/kiln-doc",
    "crates/slang-rs",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tejasprabhune/kiln"
authors = ["Tejas Prabhune <tejas.prabhune@gmail.com>"]

[workspace.dependencies]
kiln-core  = { path = "crates/kiln-core",  package = "kiln-sv-core",  version = "0.1.8" }
kiln-build = { path = "crates/kiln-build", package = "kiln-sv-build", version = "0.1.8" }
kiln-deps  = { path = "crates/kiln-deps",  package = "kiln-sv-deps",  version = "0.1.8" }
kiln-lint  = { path = "crates/kiln-lint",  package = "kiln-sv-lint",  version = "0.1.8" }
kiln-fmt   = { path = "crates/kiln-fmt",   package = "kiln-sv-fmt",   version = "0.1.8" }
kiln-test  = { path = "crates/kiln-test",  package = "kiln-sv-test",  version = "0.1.8" }
kiln-wave  = { path = "crates/kiln-wave",  package = "kiln-sv-wave",  version = "0.1.8" }
kiln-doc   = { path = "crates/kiln-doc",   package = "kiln-sv-doc",   version = "0.1.8" }
slang-rs   = { path = "crates/slang-rs",   package = "slang-sv-rs",   version = "0.1.8" }

anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ariadne = "0.4"
blake3 = "1.5"
semver = { version = "1.0", features = ["serde"] }
glob = "0.3"
walkdir = "2.5"
toml_edit = "0.22"
strsim = "0.11"
schemars = { version = "0.8", features = ["preserve_order"] }

# Test deps
insta = { version = "1.39", features = ["yaml"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = "thin"
codegen-units = 1
