[package]
name = "kiln-sv-build"
description = "Build pipeline and Verilator backend for kiln."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "kiln_build"

[dependencies]
kiln-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
glob.workspace = true
walkdir.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true

[features]
# Enables tests that invoke the real `verilator` binary on PATH.
e2e = []
