[package]
name = "kiln-cli"
description = "The `kiln` binary: a Cargo-style CLI for SystemVerilog."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "kiln"
path = "src/main.rs"

[dependencies]
kiln-core.workspace = true
kiln-build.workspace = true
kiln-deps.workspace = true
kiln-lint.workspace = true
kiln-test.workspace = true
slang-rs.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
walkdir.workspace = true
which = "6"

[features]
default = []
# Enables tests that invoke the real `verilator` binary on PATH.
e2e = []
