[package]
name = "kiln-sv-core"
description = "Manifest, project model, and shared error types for kiln."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "kiln_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
semver.workspace = true
glob.workspace = true
walkdir.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
