[package]
name = "kiln-deps"
description = "Dependency resolution for kiln (wraps bender). Stub at M0; populated from M4."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kiln-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
