[package]
name = "kiln-sv-deps"
description = "Dependency resolution for kiln. Wraps bender as a subprocess."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "kiln_deps"

[dependencies]
kiln-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true

[features]
e2e = []
