[package]
name = "kiln-sv-doc"
description = "Documentation generation for kiln. Combines slang's AST with source-level doc comments."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "kiln_doc"

[dependencies]
kiln-core.workspace = true
kiln-build.workspace = true
slang-rs.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
e2e = []
