[package]
name = "kiln-sv-fmt"
description = "Formatting for kiln. Wraps verible-verilog-format."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kiln-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true

[features]
e2e = []
