[package]
name = "kiln-sv-lint"
description = "Linting for kiln. Drives slang-rs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kiln-core.workspace = true
kiln-build.workspace = true
slang-rs.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
e2e = []
