[package]
name = "kiln-sv-test"
description = "Test discovery and runner for kiln."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "kiln_test"

[dependencies]
kiln-core.workspace = true
kiln-build.workspace = true
kiln-deps.workspace = true
glob.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
e2e = []
