[package]
name = "kiln-wave"
description = "Surfer waveform integration for kiln. Stub at M0; populated from M7."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kiln-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
