[package]
name = "kiln-sv-wave"
description = "Surfer waveform integration for kiln."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "kiln_wave"

[dependencies]
kiln-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
e2e = []
