[package]
name = "slang-rs"
description = "Pure-Rust subprocess wrapper around the slang SystemVerilog compiler CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
# Enables tests that invoke the real `slang` binary on PATH.
e2e = []
